<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.WelcomeFragment"
        android:label="@string/welcome_label">
        <action
            android:id="@+id/action_welcomeFragment_to_tutorialFragment"
            app:destination="@id/tutorialFragment" />
    </fragment>
    <fragment
        android:id="@+id/tutorialFragment"
        android:name="com.udacity.shoestore.screens.TutorialFragment"
        android:label="@string/tutorial_label">
        <action
            android:id="@+id/action_tutorialFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.screens.ShoeListFragment"
        android:label="@string/shoe_list_label">
        <action
            android:id="@+id/action_shoeListFragment_to_addShoeFragment"
            app:destination="@id/addShoeFragment" />
    </fragment>
    <fragment
        android:id="@+id/addShoeFragment"
        android:name="com.udacity.shoestore.screens.AddShoeFragment"
        android:label="@string/add_shoe_label" />
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/navigation"
        app:popUpToInclusive="true" />
</navigation>